--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
     >
 <html lang="en">
 <head>
-    <title>Register form with HTML5 using placeholder and CSS3</title>
+    <title>Cushings' Syndrome Prediction using Machine Learning</title>
 </head>
 <style type="text/css">
     #wrapper {
